--- a/LifeSpot/Views/about.html
+++ b/LifeSpot/Views/about.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <title>LifeSpot</title>
     <link href="../Static/CSS/index.css" rel="stylesheet" type="text/css">
-    <!-- Подключение Javascript-->
-    <script src="../Static/JS/about.js"></script>
+    <script type="text/javascript" src="../Static/JS/about.js"></script>
 </head>
   
 <header id="header-index">
@@ -19,8 +18,8 @@
 <!--SIDEBAR-->
 <body>
     <div class="reviews">
-        <div class="review-button">
-               <button onclick="getReview()">Оставить отзыв</button>
+        <div class="review-button">               
+            <button onclick="addComment()">Оставить отзыв</button>
         </div>
     </div>
 </body>
