--- a/LifeSpot/Views/index.html
+++ b/LifeSpot/Views/index.html
@@ -40,7 +40,7 @@
 			<h3 class="video-title">Нью-Йорк, Брайант Парк</h3>
 		</div>
 		<div class="video-container">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/wCcMcaiRbhM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/e3IGUhlmXMs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<h3 class="video-title">Санкт-Петербург, Невский Проспект</h3>
 		</div>
 		<div class="video-container">
